# rust_httpserver

./: Cargo.toml  Readme.md
.github/workflows/: ci.yml
load-tests/: locustfile.py  requirements.txt
src/: main.rs
src/http/: file_server.rs  http_router.rs  http_server.rs  mod.rs
tests/: integration_test.rs
