[package]
name = "web_server"
version = "0.1.0"
authors = ["Nuno Pinheiro <nuno.pinheiro@smallgiantgames.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-iterator = "0.6.0"
crossbeam = "0.7"

[dev-dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }